...
            "state" : "translated",
            "value" : "Включая контент NSFW, вы разрешаете показ потенциально чувствительных текстов, изображений и видео. Чтобы включить эту настройку, вам должно быть 18 лет или больше."
          }
        }
      }
    },
    "Cancel" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Abbrechen"
...
            "state" : "translated",
            "value" : "Видео не удалось воспроизвести."
          }
        }
      }
    },
    "Thread actions" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Thread-Aktionen"
...
